...
                        splashData.length,
                        (index) => buildDot(index: index),
                      ),
                    ),
                    Spacer(flex: 3),
                    DefaultButton(
                      key: Key('continueButton'),
                      text: "Continue",
                      press: () {
                        if(FirebaseAuth.instance.currentUser != null){
                          setUserDeets();
                          Navigator.of(context).pushNamed(HomeScreen.routeName);
                        }
...
